data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4068.wast
;; 7. **Test Stack Underflow Leading to Unreachable**:    - **Description**: Create a scenario where call_indirect is executed without the sufficient number of operands on the stack, with the callee containing an 'unreachable' instruction.    - **Constraint Checked**: Stack underflow handling when invoking indirect call.    - **Relation to Unreachable**: Ensure stack underflow does not erroneously reach an 'unreachable' instruction.

(assert_invalid
  (module
    (type (func (param i32 f64)))
    (table 1 funcref)
    (func $stack-underflow-unreachable
      (unreachable)
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "type mismatch"
)